--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Haree Srinivasan
+description: Master's in Data Science Student at the University of San Francisco
