--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
 title: Haree Srinivasan
 description: Master's in Data Science Student at the University of San Francisco
